checkpoint for LSGAN notebook

--- a/tutorial-LSGAN-LHCb_RICH.ipynb
+++ b/tutorial-LSGAN-LHCb_RICH.ipynb
@@ -21,8 +21,8 @@
         "id": "yzrL35_aMf4X"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mbarbetti/pidgan-notebooks/blob/main/tutorial-GAN-LHCb_RICH.ipynb)\n",
-        "[![Open in GitHub](https://img.shields.io/badge/Open_in_GitHub-blue?style=flat&logo=github&logoColor=white&labelColor=555)](https://github.com/mbarbetti/pidgan-notebooks/blob/main/tutorial-GAN-LHCb_RICH.ipynb)\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mbarbetti/pidgan-notebooks/blob/main/tutorial-LSGAN-LHCb_RICH.ipynb)\n",
+        "[![Open in GitHub](https://img.shields.io/badge/Open_in_GitHub-blue?style=flat&logo=github&logoColor=white&labelColor=555)](https://github.com/mbarbetti/pidgan-notebooks/blob/main/tutorial-LSGAN-LHCb_RICH.ipynb)\n",
         "\n",
         "**Description:** This tutorial demonstrates how to parameterize the high-level response of the LHCb RICH system using a Generative Adversarial Network (GAN) [[1](https://arxiv.org/abs/1406.2661)]. The code is written using the [pidgan](https://github.com/mbarbetti/pidgan) package that relies on TensorFlow and Keras as backends."
       ]
@@ -97,7 +97,15 @@
         "*  **Discriminator network** ($D$) - trained by a classification task to separate the generator output from the reference dataset\n",
         "* **Generator network** ($G$) - trained by a simulation task to reproduce the reference dataset trying to fake the discriminator\n",
         "\n",
-        "The goal is that $D$ optimally discriminates on the origin of the two samples, and simultaneously the training procedure for $G$ is to maximize the _probability_ of $D$ making a mistake. This framework corresponds to a **minimax two-player game** [[1](https://arxiv.org/abs/1406.2661)]."
+        "The goal is that $D$ optimally discriminates on the origin of the two samples, and simultaneously the training procedure for $G$ is to maximize the _probability_ of $D$ making a mistake. This framework corresponds to a **minimax two-player game** [[1](https://arxiv.org/abs/1406.2661)].\n",
+        "\n",
+        "Traditional GAN systems suffer from many issues, particularly during the training phase:\n",
+        "\n",
+        "* the generator may _collapse_ producing only a single sample or a small family of very similar samples (**mode collapse**)\n",
+        "* the two players may _oscillate_ during training rather than converging to the [**Nash equilibrium**](https://en.wikipedia.org/wiki/Nash_equilibrium)\n",
+        "* if _imbalance_ between the two players occurs, then the system is incapable of learning at all\n",
+        "\n",
+        "All these drawbacks result from the [**vanishing gradient problem**](https://en.wikipedia.org/wiki/Vanishing_gradient_problem), namely the lack of information for the update of the $G$ parameters. This is due to the saturation of the $D$ that is so good in distinguishing the origin of the two samples that no errors remain to the $G$ to improve the generated space. To fix the problem, one can add _continuous noise_ to both $D$ and $G$, allowing to learn thanks to a non-zero gradient [[2](https://arxiv.org/abs/1701.04862)]. Alternatively, we need to change the loss function originally proposed in Ref. [[1](https://arxiv.org/abs/1406.2661)], moving to a _distance measurement_ robust against the vanishing gradient problem. To this end, authors of Ref. [[3](https://arxiv.org/abs/1611.04076)] propose the **least squares** loss function and define the so-called **LSGAN algorithm** ."
       ]
     },
     {
@@ -129,15 +137,7 @@
         "\n",
         "<center>$\\displaystyle{\\min_G \\, \\max_D \\, \\mathcal{L}_{\\rm{GAN}} (\\theta_d, \\theta_g)}$</center>\n",
         "\n",
-        "A unique solution exists, with $G$ recovering the reference distribution $p_\\rm{ref}$ and $D$ equal to 1/2 everywhere [[1](https://arxiv.org/abs/1406.2661)].\n",
-        "\n",
-        "Traditional GAN systems suffer from many issues, particularly during the training phase:\n",
-        "\n",
-        "* the generator _may collapse_ producing only a single sample or a small family of very similar samples (**mode collapse**)\n",
-        "* the two players _may oscillate_ during training rather than converging to the [**Nash equilibrium**](https://en.wikipedia.org/wiki/Nash_equilibrium)\n",
-        "* if _imbalance_ between the two players occurs, then the system is incapable of learning at all\n",
-        "\n",
-        "All these drawbacks result from the [**vanishing gradient problem**](https://en.wikipedia.org/wiki/Vanishing_gradient_problem), namely the lack of information for the update of the $G$ parameters. This is due to the saturation of the $D$ that is so good in distinguishing the origin of the two samples that no errors remain to the $G$ to improve the generated space. To fix the problem, one can add _continuous noise_ to both $D$ and $G$. This trick allows to learn thanks to a non-zero gradient [[2](https://arxiv.org/abs/1701.04862)]."
+        "A unique solution exists, with $G$ recovering the reference distribution $p_\\rm{ref}$ and $D$ equal to 1/2 everywhere [[1](https://arxiv.org/abs/1406.2661)]."
       ]
     },
     {
@@ -159,7 +159,7 @@
       "source": [
         "## Tutorial\n",
         "\n",
-        "The aim of this tutorial is to build a parameterization of the LHCb RICH detectors. Since we expect that the high-level response of the RICH system only depends on the kinematics of the traversing particles and the detector occupancy, the former can be parameterized training a **GAN model** properly conditioned [[3](https://arxiv.org/abs/1411.1784), [4](https://arxiv.org/abs/1905.11825)]. The pidgan package provides several GAN [`algorithms`](https://github.com/mbarbetti/pidgan/tree/main/src/pidgan/algorithms) implementing some of the most used tricks presented in the literature to stablize their training [[1](https://arxiv.org/abs/1406.2661), [2](https://arxiv.org/abs/1701.04862), [5](https://arxiv.org/abs/1606.03498)]. The pidgan [`players`](https://github.com/mbarbetti/pidgan/tree/main/src/pidgan/players), namely the generator and discriminator networks, are designed to be trained taking conditions as input. In this notebook we will see how to build a model for the RICH system using the pidgan [`GAN`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/GAN.py) algorithm."
+        "The aim of this tutorial is to build a parameterization of the LHCb RICH detectors. Since we expect that the high-level response of the RICH system only depends on the kinematics of the traversing particles and the detector occupancy, the former can be parameterized training a **GAN model** properly conditioned [[3](https://arxiv.org/abs/1411.1784), [4](https://arxiv.org/abs/1905.11825)]. The pidgan package provides several GAN [`algorithms`](https://github.com/mbarbetti/pidgan/tree/main/src/pidgan/algorithms) implementing some of the most used tricks presented in the literature to stablize their training [[2](https://arxiv.org/abs/1701.04862), [3](https://arxiv.org/abs/1611.04076), [5](https://arxiv.org/abs/1606.03498)]. The pidgan [`players`](https://github.com/mbarbetti/pidgan/tree/main/src/pidgan/players), namely the generator and discriminator networks, are designed to be trained taking conditions as input. In this notebook we will see how to build a model for the RICH system using the pidgan [`GAN`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/GAN.py) algorithm."
       ]
     },
     {
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "r8glZROOi5xL"
       },
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "twM1ba1PvgVl"
       },
@@ -299,14 +299,14 @@
         "\n",
         "The data needed for this tutorial is provided through a CSV file downloadable from the [pidgan-notebooks](https://github.com/mbarbetti/pidgan-notebooks) repository.\n",
         "\n",
-        "**Disclaimer:** The data results from a toy model of the LHCb RICH system combining its high-level response when traversed by a set of long-lived charged particles, namely muons, pions, kaons and protons.\n",
+        "**Disclaimer:** The data results from a toy model inspired to the LHCb RICH system combining its high-level response when traversed by a set of long-lived charged particles, namely muons, pions, kaons and protons.\n",
         "\n",
         "The CSV file contains 250000 instances, 4 input features and 4 output features. Let's import the data as a pandas [`DataFrame`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html):"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -699,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -760,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -828,7 +828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1219,7 +1219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1584,7 +1584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "0th7xpVKCGN0"
       },
@@ -1605,7 +1605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1688,7 +1688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "ufj8Xi4fC_Ot"
       },
@@ -1708,7 +1708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1814,7 +1814,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "SBEOKmeEDWC4"
       },
@@ -1853,7 +1853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "kHL20AxZFNOq"
       },
@@ -1887,7 +1887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "C0-PqvTDGd1J"
       },
@@ -1931,7 +1931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2192,7 +2192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2238,7 +2238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2292,7 +2292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2348,7 +2348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "HVid9HKfLzPW"
       },
@@ -2372,7 +2372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2421,7 +2421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2470,7 +2470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2519,7 +2519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2570,7 +2570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2606,7 +2606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "MxsMQAkhU2_S"
       },
@@ -2619,7 +2619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2650,11 +2650,12 @@
         "\n",
         "1. I.J. Goodfellow _et al._, \"Generative Adversarial Networks\", [arXiv:1406.2661](https://arxiv.org/abs/1406.2661)\n",
         "2. M. Arjovsky, L. Bottou, \"Towards Principled Methods for Training Generative Adversarial Networks\", [arXiv:1701.04862](https://arxiv.org/abs/1701.04862)\n",
-        "3. M. Mirza, S. Osindero, \"Conditional Generative Adversarial Nets\", [arXiv:1411.1784](https://arxiv.org/abs/1411.1784)\n",
-        "4. A. Maevskiy _et al._, \"Fast Data-Driven Simulation of Cherenkov Detectors Using Generative Adversarial Networks\", [arXiv:1905.11825](https://arxiv.org/abs/1905.11825)\n",
-        "5. T. Salimans _et al._, \"Improved Techniques for Training GANs\", [arXiv:1606.03498](https://arxiv.org/abs/1606.03498)\n",
-        "6. L. Anderlini, M. Barbetti, \"scikinC: a tool for deploying machine learning as binaries\", [PoS **CompTools2021** (2022) 034](https://pos.sissa.it/409/034)\n",
-        "7. R. Conlin _et al._, \"Keras2c: A library for converting Keras neural networks to real-time compatible C\", [Eng Appl Artif Intell **100** (2021) 104182](https://doi.org/10.1016/j.engappai.2021.104182)"
+        "3. X. Mao _et al._, \"Least Squares Generative Adversarial Networks\", [arXiv:1611.04076](https://arxiv.org/abs/1611.04076)\n",
+        "4. M. Mirza, S. Osindero, \"Conditional Generative Adversarial Nets\", [arXiv:1411.1784](https://arxiv.org/abs/1411.1784)\n",
+        "5. A. Maevskiy _et al._, \"Fast Data-Driven Simulation of Cherenkov Detectors Using Generative Adversarial Networks\", [arXiv:1905.11825](https://arxiv.org/abs/1905.11825)\n",
+        "6. T. Salimans _et al._, \"Improved Techniques for Training GANs\", [arXiv:1606.03498](https://arxiv.org/abs/1606.03498)\n",
+        "7. L. Anderlini, M. Barbetti, \"scikinC: a tool for deploying machine learning as binaries\", [PoS **CompTools2021** (2022) 034](https://pos.sissa.it/409/034)\n",
+        "8. R. Conlin _et al._, \"Keras2c: A library for converting Keras neural networks to real-time compatible C\", [Eng Appl Artif Intell **100** (2021) 104182](https://doi.org/10.1016/j.engappai.2021.104182)"
       ]
     },
     {
