--- a/tutorial-LSGAN-LHCb_RICH.ipynb
+++ b/tutorial-LSGAN-LHCb_RICH.ipynb
@@ -1815,7 +1815,7 @@
         "* **`injected_noise_stddev`** (_float_, default=0.0) - When different from zero, it represents the standard deviation of the gaussian noise added to the discriminator input to further stabilize the training procedure following what described in Ref. [[2][2]].\n",
         "* **`feature_matching_penalty`** (_float_, default=0.0) - Importance of the regularization term added to the generator training to force the hidden state of the discriminator to match between reference and generated examples. Its design follows from what proposed in Ref. [[6][6]].\n",
         "* **`referee`** (_classifier_like_ or _None_, default=None) - When passed it enables the training of a third independent player: the referee network. It can be used to assess the quality of the generator output during the training. If passed, it must be a pidgan [`Classifier`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/classifiers/Classifier.py) instance.\n",
-        "* **`name`** (_str_ or _None_, default=None) - The name of the LSGAN model.\n",
+        "* **`name`** (_str_ or _None_, default=\"LSGAN\") - The name of the LSGAN model.\n",
         "* **`dtype`** (_dtype_ or _None_, default=None) - The dtype of the LSGAN model computations.\n",
         "\n",
         "[2]: https://arxiv.org/abs/1701.04862\n",
