--- a/tutorial-WGAN_ALP-LHCb_RICH.ipynb
+++ b/tutorial-WGAN_ALP-LHCb_RICH.ipynb
@@ -1813,7 +1813,7 @@
         "* **`lipschitz_penalty_strategy`** (_str_, default=\"one-sided\") - If \"two-sided\" is passed, the Lipschitz constant computed along the virtual adversarial direction is forced to be equal to 1. When \"one-sided\" is preferred, only Lipschitz constant values greater than 1 are penalized.\n",
         "* **`feature_matching_penalty`** (_float_, default=0.0) - Importance of the regularization term added to the generator training to force the hidden state of the discriminator to match between reference and generated examples. Its design follows from what proposed in Ref. [[8][8]].\n",
         "* **`referee`** (_classifier_like_ or _None_, default=None) - When passed it enables the training of a third independent player: the referee network. It can be used to assess the quality of the generator output during the training. If passed, it must be a pidgan [`Classifier`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/classifiers/Classifier.py) instance.\n",
-        "* **`name`** (_str_ or _None_, default=None) - The name of the WGAN-ALP model.\n",
+        "* **`name`** (_str_ or _None_, default=\"WGAN_ALP\") - The name of the WGAN-ALP model.\n",
         "* **`dtype`** (_dtype_ or _None_, default=None) - The dtype of the WGAN-ALP model computations.\n",
         "\n",
         "[3]: https://arxiv.org/abs/1701.07875\n",
