minor textual changes

--- a/tutorial-BceGAN-LHCb_RICH.ipynb
+++ b/tutorial-BceGAN-LHCb_RICH.ipynb
@@ -1794,7 +1794,7 @@
       "source": [
         "#### The BceGAN algorithm\n",
         "\n",
-        "The **original BceGAN algorithm** [[2][2]] can be implemented with the high-level [`BceGAN`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/BceGAN.py) class that defines the training procedure of the two players customizing the TensorFlow [`Model`](https://www.tensorflow.org/api_docs/python/tf/keras/Model) class and, in particular, its `fit()` method. Once again, before to initialize a `BceGAN` instance, let's have a look at its arguments:\n",
+        "The **BceGAN algorithm** [[2][2]] can be implemented with the high-level [`BceGAN`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/BceGAN.py) class that defines the training procedure of the two players customizing the TensorFlow [`Model`](https://www.tensorflow.org/api_docs/python/tf/keras/Model) class and, in particular, its `fit()` method. Once again, before to initialize a `BceGAN` instance, let's have a look at its arguments:\n",
         "\n",
         "* **`generator`** (_generator_like_) - The generator network. It must be passed as a pidgan [`Generator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/generators/Generator.py) instance.\n",
         "* **`discriminator`** (_discriminator_like_) - The discriminator network. It must be passed as a pidgan [`Discriminator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/discriminators/Discriminator.py) instance.\n",
@@ -1884,8 +1884,8 @@
       "source": [
         "gan.compile(\n",
         "    metrics=[\"accuracy\", \"bce\"],\n",
-        "    generator_optimizer=keras.optimizers.RMSprop(learning_rate=0.001),\n",
-        "    discriminator_optimizer=keras.optimizers.RMSprop(learning_rate=0.0005),\n",
+        "    generator_optimizer=keras.optimizers.RMSprop(learning_rate=0.002),\n",
+        "    discriminator_optimizer=keras.optimizers.RMSprop(learning_rate=0.001),\n",
         "    generator_upds_per_batch=1,\n",
         "    discriminator_upds_per_batch=1,\n",
         "    referee_optimizer=None,\n",
