--- a/tutorial-CramerGAN-LHCb_RICH.ipynb
+++ b/tutorial-CramerGAN-LHCb_RICH.ipynb
@@ -153,11 +153,11 @@
         "\n",
         "<center>$f^*_{\\rm{critic}} \\left ( a; \\theta_d, \\theta_g \\right ) = \\mathbb{E}_{z^\\prime \\sim p_z} \\left [ \\, \\left \\| D_{\\theta_d} (a) - D_{\\theta_d} \\left ( G_{\\theta_g}(z^\\prime) \\right ) \\right \\|_2 \\, \\right ] - \\left \\| D_{\\rm{\\theta_d}}(a) \\right \\|_2$</center>\n",
         "\n",
-        "the _minimax game_ can be written in this form:\n",
+        "the _minimax game_ of the **CramerGAN algorithm** can be written in this form:\n",
         "\n",
         "<center>$\\begin{cases}\n",
         "\\displaystyle{\\min_G} \\, \\mathcal{L}_{\\rm{CramerGAN}} \\left ( \\theta_d, \\theta_g \\right )\\\\\n",
-        "\\displaystyle{\\max_D} \\, \\mathcal{L}_{\\rm{CramerGAN}} \\left ( \\theta_d, \\theta_g \\right ) + \\lambda \\, \\mathbb{E}_{\\hat{x} \\sim p_{\\hat{x}}} \\left [ \\left ( \\left \\| \\nabla_{\\hat{x}} f^*_{\\rm{critic}} (\\hat{x};\\theta_d, \\theta_g) \\right \\|_2 - 1 \\right )^2 \\right ]\n",
+        "\\displaystyle{\\max_D} \\, \\mathcal{L}_{\\rm{CramerGAN}} \\left ( \\theta_d, \\theta_g \\right ) - \\lambda \\, \\mathbb{E}_{\\hat{x} \\sim p_{\\hat{x}}} \\left [ \\left ( \\left \\| \\nabla_{\\hat{x}} f^*_{\\rm{critic}} (\\hat{x};\\theta_d, \\theta_g) \\right \\|_2 - 1 \\right )^2 \\right ]\n",
         "\\end{cases}$</center>\n",
         "\n",
         "where, to ensure that $f^*_{\\rm{critic}} \\in \\mathcal{F}_2$, a regularization term called **gradient penalty** (GP) and taken from the WGAN-GP algorithm [[6][6]] is used, as suggested by the Ref. [[4][4]].\n",
