--- a/tutorial-GAN-LHCb_RICH.ipynb
+++ b/tutorial-GAN-LHCb_RICH.ipynb
@@ -130,7 +130,7 @@
         "\n",
         "<center>$\\mathcal{L}_{\\rm{GAN}} (\\theta_d, \\theta_g) = \\mathbb{E}_{x \\sim p_\\rm{ref}} \\left[ \\log{D_{\\theta_d}(x)} \\right] + \\mathbb{E}_{z \\sim p_\\rm{z}} \\left[ \\log(1 - D_{\\theta_d}(G_{\\theta_g}(z))) \\right]$</center>\n",
         "\n",
-        "the _minimax game_ can be written in this form:\n",
+        "the _minimax game_ of the **GAN algorithm** can be written in this form:\n",
         "\n",
         "<center>$\\displaystyle{\\min_G \\, \\max_D \\, \\mathcal{L}_{\\rm{GAN}} (\\theta_d, \\theta_g)}$</center>\n",
         "\n",
