--- a/tutorial-WGAN-LHCb_RICH.ipynb
+++ b/tutorial-WGAN-LHCb_RICH.ipynb
@@ -146,7 +146,7 @@
         "\n",
         "<center>$\\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g) = \\mathbb{E}_{x \\sim p_\\rm{ref}} \\left[ D_{\\theta_d}(x) \\right] - \\mathbb{E}_{z \\sim p_\\rm{z}} \\left[ D_{\\theta_d}(G_{\\theta_g}(z)) \\right]$</center>\n",
         "\n",
-        "the _minimax game_ can be written in this form:\n",
+        "the _minimax game_ of the **WGAN algorithm** can be written in this form:\n",
         "\n",
         "<center>$\\displaystyle{\\min_{\\theta_g \\in \\mathbb{R}} \\, \\max_{\\theta_d \\in \\mathcal{W}} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g)}$</center>\n",
         "\n",
