--- a/tutorial-WGAN_ALP-LHCb_RICH.ipynb
+++ b/tutorial-WGAN_ALP-LHCb_RICH.ipynb
@@ -145,11 +145,11 @@
         "\n",
         "<center>$\\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g) = \\mathbb{E}_{x \\sim p_\\rm{ref}} \\left[ D_{\\theta_d}(x) \\right] - \\mathbb{E}_{z \\sim p_\\rm{z}} \\left[ D_{\\theta_d}(G_{\\theta_g}(z)) \\right]$</center>\n",
         "\n",
-        "the _minimax game_ can be written in this form:\n",
+        "the _minimax game_ of the **WGAN-ALP algorithm** can be written in this form:\n",
         "\n",
         "<center>$\\begin{cases}\n",
         "\\displaystyle{\\min_G} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g)\\\\\n",
-        "\\displaystyle{\\max_D} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g) + \\lambda \\, \\mathbb{E}_{x \\sim p_{\\rm{ref, gen}}} \\left ( \\frac{| f(x) - f(x + r_{adv}) |}{\\| r_{adv} \\|_2} - 1 \\right )^2\n",
+        "\\displaystyle{\\max_D} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g) - \\lambda \\, \\mathbb{E}_{x \\sim p_{\\rm{ref, gen}}} \\left ( \\frac{| f(x) - f(x + r_{adv}) |}{\\| r_{adv} \\|_2} - 1 \\right )^2\n",
         "\\end{cases}$</center>\n",
         "\n",
         "where the _lipschitzianity_ of $D$ is **explicitly** ensured constraining to 1 the Lipschitz constant computed along the **virtual adversarial perturbation** $r_{adv}$, namely the direction that approximates the maximum deviation from the target discriminator behaviour. As described in Ref. [[4][4]], this is achieved using a regularization term called **adversarial Lipschitz penalty** (ALP).\n",
