--- a/tutorial-WGAN_GP-LHCb_RICH.ipynb
+++ b/tutorial-WGAN_GP-LHCb_RICH.ipynb
@@ -145,11 +145,11 @@
         "\n",
         "<center>$\\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g) = \\mathbb{E}_{x \\sim p_\\rm{ref}} \\left[ D_{\\theta_d}(x) \\right] - \\mathbb{E}_{z \\sim p_\\rm{z}} \\left[ D_{\\theta_d}(G_{\\theta_g}(z)) \\right]$</center>\n",
         "\n",
-        "the _minimax game_ can be written in this form:\n",
+        "the _minimax game_ of the **WGAN-GP algorithm** can be written in this form:\n",
         "\n",
         "<center>$\\begin{cases}\n",
         "\\displaystyle{\\min_G} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g)\\\\\n",
-        "\\displaystyle{\\max_D} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g) + \\lambda \\, \\mathbb{E}_{\\hat{x} \\sim p_{\\hat{x}}} \\left [ \\left ( \\left \\| \\nabla_{\\hat{x}} D_{\\theta_d} (\\hat{x}) \\right \\|_2 - 1 \\right )^2 \\right ]\n",
+        "\\displaystyle{\\max_D} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g) - \\lambda \\, \\mathbb{E}_{\\hat{x} \\sim p_{\\hat{x}}} \\left [ \\left ( \\left \\| \\nabla_{\\hat{x}} D_{\\theta_d} (\\hat{x}) \\right \\|_2 - 1 \\right )^2 \\right ]\n",
         "\\end{cases}$</center>\n",
         "\n",
         "where the _lipschitzianity_ of $D$ is **implicitly** ensured constraining to 1 the norm of its gradient through a regularization term called **gradient penalty** (GP), further described in Ref. [[4][4]].\n",
