--- a/tutorial-WGAN_ALP-LHCb_RICH.ipynb
+++ b/tutorial-WGAN_ALP-LHCb_RICH.ipynb
@@ -149,7 +149,7 @@
         "\n",
         "<center>$\\begin{cases}\n",
         "\\displaystyle{\\min_G} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g)\\\\\n",
-        "\\displaystyle{\\max_D} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g) - \\lambda \\, \\mathbb{E}_{x \\sim p_{\\rm{ref, gen}}} \\left ( \\frac{| f(x) - f(x + r_{adv}) |}{\\| r_{adv} \\|_2} - 1 \\right )^2\n",
+        "\\displaystyle{\\max_D} \\, \\mathcal{L}_{\\rm{WGAN}} (\\theta_d, \\theta_g) - \\lambda \\, \\mathbb{E}_{x \\sim p_{\\rm{ref, gen}}} \\left ( \\frac{\\left | D_{\\theta_d}(x) - D_{\\theta_d}(x + r_{adv}) \\right |}{\\| r_{adv} \\|_2} - 1 \\right )^2\n",
         "\\end{cases}$</center>\n",
         "\n",
         "where the _lipschitzianity_ of $D$ is **explicitly** ensured constraining to 1 the Lipschitz constant computed along the **virtual adversarial perturbation** $r_{adv}$, namely the direction that approximates the maximum deviation from the target discriminator behaviour. As described in Ref. [[4][4]], this is achieved using a regularization term called **adversarial Lipschitz penalty** (ALP).\n",
@@ -1994,7 +1994,7 @@
         "    epochs=100,\n",
         "    validation_split=0.3,\n",
         "    callbacks=schedules,\n",
-        "    verbose=0,\n",
+        "    verbose=1,\n",
         ")\n",
         "\n",
         "stop = datetime.now()\n",
