--- a/tutorial-WGAN_GP-LHCb_RICH.ipynb
+++ b/tutorial-WGAN_GP-LHCb_RICH.ipynb
@@ -12,7 +12,7 @@
         "\n",
         "**Date created:** 16/10/2023\n",
         "\n",
-        "**Last modified:** 07/11/2023"
+        "**Last modified:** 09/11/2023"
       ]
     },
     {
@@ -1805,7 +1805,7 @@
       "source": [
         "#### The WGAN-GP algorithm\n",
         "\n",
-        "The **WGAN-GP algorithm** [[4][4]] can be implemented with the high-level [`WGAN_GP`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/WGAN_GP.py) class that defines the training procedure of the two players customizing the TensorFlow [`Model`](https://www.tensorflow.org/api_docs/python/tf/keras/Model) class and, in particular, its `fit()` method. Once again, before to initialize a `WGAN_GP` instance, let's have a look at its arguments:\n",
+        "The **WGAN-GP algorithm** [[3][3], [4][4]] can be implemented with the high-level [`WGAN_GP`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/WGAN_GP.py) class that defines the training procedure of the two players customizing the TensorFlow [`Model`](https://www.tensorflow.org/api_docs/python/tf/keras/Model) class and, in particular, its `fit()` method. Once again, before to initialize a `WGAN_GP` instance, let's have a look at its arguments:\n",
         "\n",
         "* **`generator`** (_generator_like_) - The generator network. It must be passed as a pidgan [`Generator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/generators/Generator.py) instance.\n",
         "* **`discriminator`** (_discriminator_like_) - The discriminator network. It must be passed as a pidgan [`Discriminator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/discriminators/Discriminator.py) instance.\n",
@@ -1816,6 +1816,7 @@
         "* **`name`** (_str_ or _None_, default=\"WGAN_GP\") - The name of the WGAN-GP model.\n",
         "* **`dtype`** (_dtype_ or _None_, default=None) - The dtype of the WGAN-GP model computations.\n",
         "\n",
+        "[3]: https://arxiv.org/abs/1701.07875\n",
         "[4]: https://arxiv.org/abs/1704.00028\n",
         "[8]: https://arxiv.org/abs/1606.03498"
       ]
